--- a/conda.yml
+++ b/conda.yml
@@ -3,7 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
+  - python=3.10.0
+  - numpy=1.24.0
   - pyyaml
   - hydra-core=1.3.2
   - pip=23.3.1
